# Alpha-Cortex-AI-Green

./: .env.example  .gitignore  README.md  pyproject.toml  scenario.toml
data_sample/: README.md  dataset_metadata.json
data_sample/2018/: 101199_2018.json
data_sample/2019/: 1000045_2019.json
data_sample/2020/: 1041514_2020.json
src/: agent.py  cache.py  data_utils.py  server.py
tests/: test_scoring.py
